# digez_api

./: README.md  pyproject.toml
digeiz_api/: api.py
digeiz_api/db/: connection.py  crud.py  models.py  schemas.py
tests/: conftest.py  test_api.py  test_creation.py
