[tool.poetry]
name = "digeiz_api"
version = "0.1.0"
description = ""
authors = ["Soufiane Benzaoui <f>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.63.0"}
uvicorn = "^0.13.3"
SQLAlchemy = "^1.3.22"
Faker = "^5.6.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
yapf = "^0.30.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
api = "digeiz_api.api:main"